<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="#fff"
    android:orientation="vertical"
    android:outlineAmbientShadowColor="@color/black"
    android:padding="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="#fff"
        android:src="@drawable/cloud_done" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/custom_dialog_registration_successfull"
            android:textColor="@color/green_shade_2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/custom_dialog_email_sent"
            android:textAlignment="center"
            android:textColor="#B7000000"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialogText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/custom_dialog_email_verification"
            android:textColor="#B7000000"
            android:textSize="13sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button_back"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/custom_dialog_okay_button" />
    </LinearLayout>

</LinearLayout>